<resources>
    <string name="app_name">peacefull-dessert-mob-dev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Home Page</string>
    <string name="hello_blank_fragment2">Cart</string>
    <string name="hello_blank_fragment3">Form Page</string>
    <string name="hello_blank_fragment4">Settings</string>
    <string name="hello_blank_fragment5">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="form">Form</string>
    <string name="settings">Settings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="more_information">More Information</string>
    <string name="price">Price $</string>
    <string name="brief_information">Brief Information</string>
    <string name="caramel_eclaire">Caramel Eclaire</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dessert_name">Dessert Name</string>
    <string name="arrow">Arrow</string>
    <string name="switch_accounts">Switch Accounts</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="payment_method">Payment Method</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="form_for_orders">Form for Orders</string>
    <string name="what_would_you_like_to_order">What would you like to order?</string>
    <string name="submit">Submit</string>
    <string name="street_address">Street Address</string>
    <string name="type_here_everything_we_need_to_know">Type here everything we need to know</string>
    <string name="do_you_have_allergies">Do you have allergies?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_of_the_order">Name of the Order</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account">No account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="more_info">More Info</string>
    <string name="purchase">Purchase</string>
    <string name="available">Available:</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="rate">Rate</string>
    <string name="comments">Comments</string>
    <string name="recommendations">Recommendations</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="_5_99">$5.99</string>
    <string name="brief_description_of_the_dessert">Brief description of the dessert</string>
    <string name="back_arrow">back arrow</string>
    <string name="music">Music</string>
</resources>