<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".FormsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_for_orders"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_would_you_like_to_order"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:layout_marginHorizontal="10dp"
                android:inputType="text"
                android:hint="@string/name_of_the_order" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/do_you_have_allergies" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/background_dark" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/type_here_everything_we_need_to_know"
                android:inputType="textMultiLine"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/editTextTextPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:ems="10"
                android:layout_marginHorizontal="10dp"
                android:inputType="textPostalAddress"
                android:hint="@string/street_address"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>