<?xml version="1.0" encoding="utf-8"?>
<!--Description: Account Log in Activity xml layout
Notes: Needs updated colour scheme
Author: Valeriia Savych
Documentor: Rion Miyazaki-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/cream">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/rose"/>

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/rose"/>

</LinearLayout>