<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SinglePageDessert">


    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="38dp"
        android:layout_margin="15dp"
        android:gravity="center"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24"
        android:clickable="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:layout_marginHorizontal="15dp"
                android:layout_gravity="center"

                android:scaleType="centerCrop"
                android:src="@drawable/caramel_eclaire" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:gravity="center">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/hello_blank_fragment5"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/price"
                    android:gravity="end"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center"
                android:text="@string/available"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textview"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/rate"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/comments"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/recommendations"
                android:textSize="23sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cards"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_column="1"
                app:layout_row="1" />

        </LinearLayout>


    </ScrollView>



</LinearLayout>