<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <!--Settings Title-->
    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment4"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--Line divider-->
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <!--Account section-->
    <LinearLayout
        android:id="@+id/clickBoxAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">


        <ImageView
            android:id="@+id/imageViewAccountDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/outline_account_circle_24" />

        <TextView
            android:id="@+id/textViewAccountSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/account"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />

    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!--Line divider-->
    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/clickBoxPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageViewPaymentDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/baseline_add_card_24" />

        <TextView
            android:id="@+id/textViewPaymentMethod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/payment_method"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />
    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/clickBoxLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageViewLanguageDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/outline_language_24" />

        <TextView
            android:id="@+id/textViewLanguageSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/language"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />


    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/clickBoxNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageViewNotificationDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/outline_circle_notifications_24" />

        <TextView
            android:id="@+id/textViewNotifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/notifications"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />
    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/clickBoxPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageViewPrivacyDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/outline_admin_panel_settings_24" />

        <TextView
            android:id="@+id/textViewPrivacySettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/privacy"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />
    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/clickBoxSwitchAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageViewSwitchAccountDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/outline_supervised_user_circle_24" />

        <TextView
            android:id="@+id/textViewSwitchAccounts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/switch_accounts"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />
    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/clickBoxLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">


        <ImageView
            android:id="@+id/imageViewLogOutDrawable"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/outline_exit_to_app_24" />

        <TextView
            android:id="@+id/textViewLogOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:text="@string/log_out"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/outline_arrow_forward_ios_24" />
    </LinearLayout>

    <!--Line divider-->
    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>